# backscrub

./: CMakeLists.txt  README.md
lib/: libbackscrub.cc
